Notes from laptop

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -12,6 +12,6 @@
   "alwaysUpdateLinks": true,
   "promptDelete": false,
   "showFrontmatter": false,
-  "newFileLocation": "root",
+  "newFileLocation": "current",
   "attachmentFolderPath": "Images"
 }
