--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,5 +13,5 @@
   "promptDelete": false,
   "showFrontmatter": false,
   "newFileLocation": "current",
-  "attachmentFolderPath": "Images"
+  "attachmentFolderPath": "attachments"
 }
