Notes from laptop

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,5 +13,6 @@
   "promptDelete": false,
   "showFrontmatter": false,
   "newFileLocation": "current",
-  "attachmentFolderPath": "attachments"
+  "attachmentFolderPath": "attachments",
+  "showUnsupportedFiles": true
 }
