Notes from desktop

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -8,5 +8,6 @@
     "breakdown"
   ],
   "nativeMenus": false,
-  "showViewHeader": true
+  "showViewHeader": true,
+  "monospaceFontFamily": "Fira Code Retina"
 }
