Added shortcut button to assignment tracker

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -5,7 +5,8 @@
   "accentColor": "",
   "enabledCssSnippets": [
     "pro_con_list",
-    "breakdown"
+    "breakdown",
+    "button-overrides"
   ],
   "nativeMenus": false,
   "showViewHeader": true,
