--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               scripts
+name:               breakdown-html
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -21,7 +21,7 @@ maintainer:         56912943+SMC242@users.noreply.github.com
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable scripts
+executable breakdown-html
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
