--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -29,6 +29,6 @@ executable breakdown-html
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0, megaparsec
+    build-depends:    base ^>=4.19.0.0, megaparsec, optparse-applicative
     hs-source-dirs:   app
     default-language: Haskell2010
