--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -25,10 +25,17 @@ executable breakdown-html
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        HTML
+        , Markdown
+        , CLI
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.19.0.0, megaparsec, optparse-applicative
+    build-depends:
+        base ^>=4.19.0.0
+        , megaparsec
+        , optparse-applicative
+        , text
     hs-source-dirs:   app
     default-language: Haskell2010
