--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -15,5 +15,6 @@
   "newFileLocation": "current",
   "attachmentFolderPath": "attachments",
   "showUnsupportedFiles": true,
-  "showInlineTitle": true
+  "showInlineTitle": true,
+  "rightToLeft": false
 }
