--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -26,16 +26,24 @@ executable breakdown-html
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        HTML
-        , Markdown
-        , CLI
+        CLI
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
         base ^>=4.19.0.0
-        , megaparsec
         , optparse-applicative
-        , text
     hs-source-dirs:   app
     default-language: Haskell2010
+
+library parsing-lib
+    exposed-modules:
+        Markdown
+        , HTML
+    hs-source-dirs: lib
+    build-depends:
+        base ^>=4.19.0.0
+        , megaparsec
+        , text
+    default-language: Haskell2010
+
