test: Markdown test suite

--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -47,3 +47,13 @@ library parsing-lib
         , text
     default-language: Haskell2010
 
+test-suite test-markdown
+    type:            exitcode-stdio-1.0
+    main-is:          test-markdown.hs
+    build-depends:
+        base
+        , megaparsec
+        , HUnit
+        , parsing-lib
+    hs-source-dirs: test
+    default-language: Haskell2010
