--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -36,7 +36,7 @@ executable breakdown-html
     hs-source-dirs:   app
     default-language: Haskell2010
 
-library parsing-lib
+library markup-lib
     exposed-modules:
         Markdown
         , HTML
@@ -55,6 +55,6 @@ test-suite test-markdown
         , megaparsec
         , HUnit
         , text
-        , parsing-lib
+        , markup-lib
     hs-source-dirs: test
     default-language: Haskell2010
