--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -26,13 +26,14 @@ executable breakdown-html
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        CLI
+        Cli
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
         base ^>=4.17.0.0
         , megaparsec
+        , text
         , optparse-applicative
         , markup-lib
     hs-source-dirs:   app
