--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -49,6 +49,8 @@ library markup-lib
         , megaparsec
         , text
     default-language: Haskell2010
+    default-extensions:
+        OverloadedStrings
 
 test-suite test-markdown
     type:            exitcode-stdio-1.0
