wip: file conversion logic

--- a/scripts/breakdown-html/breakdown-html.cabal
+++ b/scripts/breakdown-html/breakdown-html.cabal
@@ -27,6 +27,7 @@ executable breakdown-html
     -- Modules included in this executable, other than Main.
     other-modules:
         Cli
+        , Conversion
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -35,6 +36,7 @@ executable breakdown-html
         , megaparsec
         , text
         , optparse-applicative
+        , mtl
         , markup-lib
     hs-source-dirs:   app
     default-language: Haskell2010
