Notes from laptop

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -16,5 +16,6 @@
   "attachmentFolderPath": "attachments",
   "showUnsupportedFiles": true,
   "showInlineTitle": true,
-  "rightToLeft": false
+  "rightToLeft": false,
+  "vimMode": true
 }
